--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma": "^7.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
