--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.6",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "lightgallery": "^2.9.0",
+    "react-photo-album": "^2.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
