--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "react-easy-crop": "^5.5.6",
     "react-firebase-hooks": "^5.1.1",
     "lightgallery": "^2.9.0",
-    "react-photo-album": "^2.4.1"
+    "react-photo-album": "^2.4.1",
+    "@mantine/core": "^7",
+    "@mantine/hooks": "^7",
+    "@mantine/notifications": "^7",
+    "@mantine/modals": "^7",
+    "@mantine/dropzone": "^7",
+    "@emotion/react": "^11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
