--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^7.0.0",
     "firebase": "^12.6.0",
+    "firebase-admin": "^12.5.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
     "prisma": "^7.0.0",
