--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11",
+    "@mantine/core": "^7",
+    "@mantine/dropzone": "^7",
+    "@mantine/hooks": "^7",
+    "@mantine/modals": "^7",
+    "@mantine/notifications": "^7",
     "@prisma/client": "^7.0.0",
     "firebase": "^12.6.0",
     "firebase-admin": "^12.5.0",
+    "lightgallery": "^2.9.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
     "prisma": "^7.0.0",
@@ -19,22 +28,22 @@
     "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.6",
     "react-firebase-hooks": "^5.1.1",
-    "lightgallery": "^2.9.0",
-    "react-photo-album": "^2.4.1",
-    "@mantine/core": "^7",
-    "@mantine/hooks": "^7",
-    "@mantine/notifications": "^7",
-    "@mantine/modals": "^7",
-    "@mantine/dropzone": "^7",
-    "@emotion/react": "^11"
+    "react-photo-album": "^2.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
