--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^12.5.0",
     "lightgallery": "^2.9.0",
     "next": "16.0.3",
+    "nodemailer": "^6.9.16",
     "pg": "^8.16.3",
     "prisma": "^7.0.0",
     "react": "19.2.0",
@@ -37,6 +38,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
