--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "firebase": "^12.6.0",
     "firebase-admin": "^12.5.0",
     "lightgallery": "^2.9.0",
-    "next": "16.0.3",
-    "nodemailer": "^6.9.16",
+    "next": "^16.1.0",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "prisma": "^7.0.0",
     "react": "19.2.0",
@@ -39,11 +39,10 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
