--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.6",
-    "react-image-crop": "^11.0.6",
     "react-firebase-hooks": "^5.1.1",
+    "react-image-crop": "^11.0.6",
+    "react-intersection-observer": "^10.0.0",
     "react-photo-album": "^2.4.1"
   },
   "devDependencies": {
